[gd_scene load_steps=4 format=3 uid="uid://bkvbwuvy6gwpg"]

[ext_resource type="Script" path="res://scripts/orb_base.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://yqwufd7jfcug" path="res://resources/1.png" id="2_8w501"]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0

[node name="Orb" type="Area2D"]
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 1
texture = ExtResource("2_8w501")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Label" type="Label" parent="."]
offset_top = -60.0
offset_right = 40.0
offset_bottom = -20.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 36
text = "TEST TEXT"

[node name="GlowEffect" type="CPUParticles2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
